# utils

./: .gitignore  README.md
devtools/: Dockerfile  README  TODO  dev-image.sh  dev.sh  env  env.sh  functions  godev.sh  pydev.sh  setup.sh  vimrc
devtools/conf.d/: 0-base.sh  1-go.sh  2-docker.sh  2-protobuf.sh  5-aws.sh  5-casablance.sh  5-gotool.sh  5-haskell.sh  5-myrepo.sh  5-python.sh  5-scala.sh  5-vim.sh  aws.sh  gotool.sh  scala.sh
devtools/cxx/cmake/: CMakeLists.txt  Config.h.in  hello.cc  hello1.cc  hellobar.cc
devtools/cxx/cmake/subdir/: CMakeLists.txt  bar.cc  bar.h
devtools/cxx/cmake/tests/: CMakeLists.txt  test_bar_boost.cc
devtools/docker/: Dockerfile  dev.sh  env.sh
devtools/docker/conf.d/: 1-go.sh  5-casablance.sh  5-config.sh
devtools/docker/general/: bashrc  tmp-vimrc  vimrc  ycm_extra_conf.py
devtools/general/: bashrc  vimrc
devtools/go/: .bashrc.un~  .vimrc.un~  bashrc  vimrc  ycm_extra_conf.py
devtools/python/: .vimrc.un~  bashrc  vimrc
examples/aws/import-image/: containers.json  ref  role-policy.json  step.sh  trust-policy.json
examples/docker-tools/clair/: example-out.json  note
examples/hdfs-krbs/: gen-principals.sh
examples/issues/: golang-http-client-reuse
examples/k8s/kubeadm/: why-admin.conf-is-an-admin.txt
examples/libnl/: .RUN.un~  .ipshow.c.un~  Makefile  RUN  ipshow.c
examples/libs/boost/asio/: unix-server.cc
examples/libs/go-github-biogo-store-interval/update/: main.go
examples/libs/protobuf/cxx/: Makefile  example.proto  note  test.cc
examples/libs/protobuf/go/: example.proto
examples/libs/protobuf/go/tests/: print.go
examples/libs/riak-go-client/: list.go
examples/math/gcd/: .gcd.go.un~  .gcd_test.go.un~  gcd.go  gcd_test.go
examples/math/numtheory/: gcd.go  gcd_test.go  reminder.go  reminder_test.go
examples/openssl/: create-ca-and-sign-multiple-key  showcert
examples/scala/hello-world/: build.sbt
examples/system/: update-ca
examples/system/unix-socket-scm/: recv.cc  send.cc
goutils/http/: README  api-server.go  echo-server.go
goutils/sys/: unix.go
quirks/kubernetes/: kubeadm-init-cluster-not-authorizing-admin-by-default
random/conferences/: atc18
random/conferences/eurosys18/: config.go  store.go  store_test.go
random/conferences/eurosys18/building/: container.go  makefile.go  server.go  vm.go
random/conferences/eurosys18/cmdproxy/: server.go
random/conferences/eurosys18/enforcer/: algorithm  config.go  enforcer.go  events.go  exec.go  fork.go  images.go  logmonitor.go  main.go  monitors.go  policy.go  policymonitor.go  proc.go  reload.go  utils.go
random/conferences/eurosys18/kvstore/: server.go
random/conferences/eurosys18/lbuild/: main.go
random/conferences/eurosys18/lexec/: Dockerfile  main.go  policy.json
random/conferences/eurosys18/proxy/: conn.sh  pmap.go  server.go  test.sh  tmp.sh  upload.sh
random/conferences/eurosys18/results/bro/: time-nmap  time-nmap-latte  time-normal  time-normal-latte
random/conferences/eurosys18/results/lexec/: normal-times  times-async  times-normal  times-principals
random/conferences/eurosys18/results/mysql/: abac-time  normal-time  normal-time-no-router
random/conferences/eurosys18/safe-scripts/: child.sh  cmd  id.py  key  membership.sh  output
random/conferences/sosp17/swamp/: list.sh  login.sh  package.sh
random/homemonitor/: monitor.py
random/leetcode/105-bintree-inorder-preorder/: note
random/leetcode/4-median-of-sorted/: solution.go
random/mortgage/: calc.py
random/notes/: grub2-fall-back
random/strace-pio-build/: display.py  g1.dot  g2.dot  g3.dot  g4.dot  g5.dot  prepare.sh  test.dot
tools/: install.sh
tools/git/: ghead  gnext  gprev  install.sh
tools/stat/: jstat
tools/sys/: copydep  install.sh
tools/time/: time.c
